--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -9,7 +9,9 @@
 <body>
     <center>
         <h1>All Products</h1>
-        <table>
+    </center>
+    <div class="container   ">
+        <table class="table table-bordered table-hover">
             <thead>
                 <tr>
                     <td>Nome</td>
@@ -29,6 +31,6 @@
                 <% end %>
             </tbody>
         </table>
-    </center>
+    </div>
 </body>
 </html>
