--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,37 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cadastrar novos produtos</title>
-</head>
-<body>
-    <h1 class="text-center">Criar novo <b>Produto!</b></h1>
-    <div class="container">
-        <%= form_for :produto, url: "/products" do |form| %>
-            <div class="form-group">
-                <label for="name" aria-describedby="emailHelp">Nome</label>
-                <input class="form-control" type="text" name="product[name]" id="name"/>
-             </div>
-             <div class="form-group">
-                <label for="desc" aria-describedby="emailHelp">Descrição</label>
-                <input class="form-control" type="text" name="product[description]" id="desc"/>
+<h1 class="text-center">Criar novo <b>Produto!</b></h1>
+<div class="container">
+    <%= form_for :product, url: "/products" do |form| %>
+        <div class="form-group">
+            <%= form.label :nome, :for => "product_name" %>
+            <%= form.text_field :name, :class => "form-control"%>
             </div>
             <div class="form-group">
-                <label for="price" aria-describedby="emailHelp">Preço</label>
-                <input class="form-control" type="number" name="product[price]" id="price" step="0.01"/>
-            </div>
-            <div class="form-group">
-                <label for="quant" aria-describedby="emailHelp">Quantidade</label>
-                <input class="form-control" type="number" name="product[quantity]" id="quant"/>
-            </div>
-            <div class="form-group row">
+            <%= form.label :descrição, :for => "product_description"%>
+            <%= form.text_area :description, :class => "form-control", rows: 4%>
+        </div>
+        <div class="form-group">
+            <%= form.label :preço, :for => "product_price"%>
+            <%= form.number_field :price, :class => "form-control", step: 0.01%>
+        </div>
+        <div class="form-group">
+            <%= form.label :quantidade, :for => "product_quantity"%>
+            <%= form.number_field :quantity, :class => "form-control"%>
+        </div>
+        <div class="form-group row">
             <div class="col-sm-10">
-                <button type="submit" class="btn btn-primary">Sign in</button>
-                </div>
+                <%= form.submit :cadastrar, :class => "btn btn-primary"%>
             </div>
-        <% end %>
-    </div>
-</body>
-</html>
+        </div>
+    <% end %>
+</div>
