--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,10 @@
   </head>
 
   <body>
-  <%= render "shared/header" %>
+    <%= render "shared/header" %>
+    <div class="container">
+      <%= flash_message %>
+    </div>
     <%= yield %>
   </body>
 </html>
